Bug 1036637 - disable HDR on low-memory devices, r=dhylands